2002-10-08 garlick
	* Fixed bug where Action "found" client by client struct address, but
	  if client had died, address could still be valid.  Now we use a 
	  unique integer identifier to find client.

2002-10-06 garlick
	* More man page edits.

2002-10-06 garlick
	* Updated hostlist.[ch] to latest from the pdsh sources.
	* Tagged powerman-1-0-9.

2002-10-06 garlick
	* _process_send can now time out.
	* Clean up device.c select handling a bit to make it clear why actions
	  will not time out if device is not connected. 
	* _handle_write now handles errors from buf_write.
	* Client now returns error on unimplemented commands.
	* Changed powerman "-z --report" option to "-q --query"
	* Added soft power status support to vpc, fixed login logic in vpc,
	  Added --soft-off test.
	* Don't clear wset bit after finish_connect unless fd != -1.
	* Tagged powerman-1-0-8.

2002-10-05 garlick
	* More man page updates
	* Updated TODO, moved README to d1oc/Overview.txt, removed Retagging.
	* Removed various outdated scripts in scripts subdir.
	* Added --off_rpc and --hung_rpc options to vpcd for testing.
	* Updated timeouts from 0.3 to 0.5 in icebox3.dev (determined to be
	  safe on MCR).

2002-10-04 garlick
	* Client now performs on and off command if executable is 
	  linked to "on" and "off".  Install links "on", "off", and "pm"
	  in spec file.
	* Set all plug/node state to ST_UNKNOWN prior to status query command.
	* Updated client man page.

2002-10-04 garlick
	* Now properly handles the case of one ice box hanging.
	  (tested with vpcd --bad_response)
	* Don't call action callback from within dev_enqueue_actions
	  (triggers act->cmd != NULL assertion in _act_finish).
	  Error handling was inappropriate anyway - try silently ignoring
	  unimplemented commands, and queuing actions for un-logged-in devices.
	* Client works again (though still minimal)
	* Tagged powerman-1-0-7.

2002-10-02 garlick
	* Created Command data structure to represent what was called